# Equilibrium

./: .gitignore  README.md  pyproject.toml
evidence/: incident_log.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
src/: app.py
src/Crime_Catcher/: __main__.py
src/Crime_Catcher/Analyze/: analyze.py
src/Crime_Catcher/Analyze/evidence/: incident_log.json
src/Crime_Catcher/Camera/: camera.py
src/Crime_Catcher/Video/: video.py
src/Equilibrium.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/crime_catcher.egg-info/: PKG-INFO
tests/: camera_test.py
