
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Equilibrium"
version = "0.1.0"
description = "Measures coolness under pressure."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
equilibrium = "Equilibrium.__main__:main"